<resources>
    <string name="app_name">HydroponicNewCelery</string>

    <string name="temperature_label">Temperature: </string>

    <string name="temperature_description">Temperature Button</string>
    <string name="ph_description">pH Button</string>
    <string name="humidity_description">Humidity Button</string>
    <string name="water_level_description">Water Level Button</string>
    <string name="turbidity_description">Turbidity Button</string>

    <string name="menu_temperature">Temperature</string>
    <string name="menu_ph">pH</string>
    <string name="menu_humidity">Humidity</string>

    <string name="temperature_button_description">Temperature Button</string>
    <string name="ph_button_description">pH Button</string>
    <string name="humidity_button_description">Humidity Button</string>
    <string name="water_level_button_description">Water Level Button</string>
    <string name="turbidity_button_description">Turbidity Button</string>

    <string name="humidity_placeholder">Humidity: -- %</string>
    <string name="update_humidity_data">Update Humidity Data</string>

    <string name="open_temperature">Open Temperature</string>
    <string name="open_humidity">Open Humidity</string>
    <string name="open_ultrasonic">Open Ultrasonic</string>

    <string name="button_send_temperature">Send Temperature Data</string>
    <string name="button_send_humidity">Send Humidity Data</string>
    <string name="button_send_ultrasonic">Send Ultrasonic Data</string>

    <string name="turbidity_value_format">Turbidity: %.2f NTU</string>
    <string name="turbidity_label_placeholder">Turbidity: N/A</string>
    <string name="update_turbidity_data_button">Update Turbidity Data</string>
    <string name="api_error_message_format">Handle Unsuccessful: %d - %s</string>
    <string name="api_failure_message">Failed to connect to Blynk API</string>
    <string name="blynk_api_tag">Blynk API</string>
    <string name="water_level_status_label">Water Level Status:</string>





    <string name="turn_on_acid_pump">Turn On AB Mix Pump</string>
    <string name="turn_off_acid_pump">Turn Off Acid Pump</string>
    <string name="turn_on_base_pump">Turn On Water Intake Pump</string>
    <string name="turn_off_base_pump">Turn Off Base Pump</string>

    <string name="button_update_temperature_status">Update Temperature Status</string>
    <string name="button_update_water_temperature_status">Update Water Temperature Status</string>


    <string name="current_temperature">Current Temperature: 25°C</string>
        <string name="weather_icon_description">Weather Icon</string>
    <string name="ph_value_placeholder">pH Value: --</string>
    <string name="update_ph_data_button">Update pH Data</string>
    <string name="ultrasonic_label">Ultrasonic Value: </string>
    <string name="update_ultrasonic_button">Update Ultrasonic</string>


    <string name="button_temperature">Temperature</string>
    <string name="button_humidity">Humidity</string>
    <string name="button_turbidity">Turbidity</string>
    <string name="button_ph">pH</string>
    <string name="button_sensors">Sensors</string>

    <string name="humidity_label">Humidity</string>
    <string name="turbidity_label">Turbidity</string>
    <string name="ph_label">pH</string>
    <string name="sensors_label">Sensors</string>

        <string name="current_humidity">Current Humidity: 50%</string>
        <string name="humidity_icon_description">Humidity Icon</string>

        <string name="current_ultrasonic">Ultrasonic Distance: 100 cm</string>
        <string name="ultrasonic_icon_description">Ultrasonic Icon</string>

    <string name="temperature_placeholder">Temperature: N/A</string>
    <string name="ph_placeholder">pH: N/A</string>
    <string name="water_level_placeholder">Water Level: N/A</string>
    <string name="turbidity_placeholder">Turbidity: N/A</string>

    <string name="update_humidity">Update Humidity</string>
    <string name="update_temperature">Update Temperature</string>

</resources>