<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEFA">

    <!-- Include the common base layout -->
    <include layout="@layout/activity_base" />

    <!-- pH Value TextView -->
    <TextView
        android:id="@+id/phValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/ph_value_placeholder"
        android:textSize="18sp" />

    <!-- Update pH Button -->
    <Button
        android:id="@+id/updatePhButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phValueTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/update_ph_data_button" />

    <!-- Acid Pump Toggle Button -->
    <ToggleButton
        android:id="@+id/acidPumpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/updatePhButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textOn="@string/turn_off_acid_pump"
        android:textOff="@string/turn_on_acid_pump" />

    <!-- Base Pump Toggle Button -->
    <ToggleButton
        android:id="@+id/basePumpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/acidPumpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textOn="@string/turn_off_base_pump"
        android:textOff="@string/turn_on_base_pump" />
</RelativeLayout>
