<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/temperatureValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/updateTemperatureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send_temperature"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/updateTemperatureStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_update_temperature_status"
        android:layout_below="@id/updateTemperatureButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/updateWaterTemperatureStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_update_water_temperature_status"
        android:layout_below="@id/updateTemperatureStatusButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />



    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_weather_sunny"
        android:contentDescription="@string/weather_icon_description"/>

</RelativeLayout>
