<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sendHumidityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send_humidity"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_humidity"
        android:layout_below="@id/sendHumidityButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <SeekBar
        android:id="@+id/humiditySeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/humidityTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <ProgressBar
        android:id="@+id/humidityProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/humiditySeekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/updateHumidityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_humidity"/>



    <ImageView
        android:id="@+id/humidityImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/humidityProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_humidity_icon"
        android:contentDescription="@string/humidity_icon_description"/>
</RelativeLayout>
