<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sendUltrasonicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send_ultrasonic"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/ultrasonicTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_ultrasonic"
        android:layout_below="@id/sendUltrasonicButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <SeekBar
        android:id="@+id/ultrasonicSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ultrasonicTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <ProgressBar
        android:id="@+id/ultrasonicProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ultrasonicSeekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/ultrasonicImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/ultrasonicProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_ultrasonic_icon"
        android:contentDescription="@string/ultrasonic_icon_description"/>
</RelativeLayout>
